# midi-footswitch-controller

./: CMakeLists.txt
src/: ANALOG.h  CMakeLists.txt  example.dt  midi-footswitch-controller.cpp  midi-footswitch-controller.h  system-commands.h
