# CMakeList.txt : projet CMake pour midi-footswitch-controller, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

# Ajoutez une source à l'exécutable de ce projet.
add_executable (midi-footswitch-controller "midi-footswitch-controller.cpp" "midi-footswitch-controller.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
